--- a/index.html
+++ b/index.html
@@ -71,23 +71,23 @@
                 <div class="paper-front">
                     <div class="paper-content">
                         <h2>Моя любимая Настя!</h2>
-                        <p>Спасибо тебе за то, что ты есть в моей жизни. С твоим появлением всё вокруг наполнилось яркими красками и тёплыми эмоциями.</p>
-                        <p>Иногда я бываю вредным и делаю всякие пакости. Прости меня за это! Но знай, что я люблю тебя всем сердцем, и это никогда не изменится.</p>
-                        <p>Ты делаешь каждый мой день особенным. Твоя улыбка согревает меня даже в самые холодные дни, а твой смех это самая красивая мелодия.</p>
-                        <p>Я так рад, что судьба свела нас вместе. Ты не просто моя девушка, ты мой лучший друг и моё вдохновение.</p>
-                        <p class="signature">С любовью, твой Даня ❤</p>
+                        <p>Спасибо тебе за то, что ты есть. С твоим появлением моя жизнь наполнилась красками и яркими эмоциями.</p>
+                        <p>Я знаю, что иногда сильно косячу. Я вообще не идеальный парень. Но я очень рад, что ты выбрала именно меня.</p>
+                        <p>У тебя красивые волосы и прекрасные глаза. Ты заботливая, милая и добрая. Это не просто слова, это то, что я вижу каждый день.</p>
+                        <p>Спасибо, что ты рядом.</p>
+                        <p class="signature">Твой Даня</p>
                     </div>
                 </div>
                 <div class="paper-back">
                     <div class="paper-content back-content">
                         <h2>От Дани</h2>
                         <div class="heart-decoration">♥</div>
-                        <p>Ты лучшее, что случилось со мной в этом году.</p>
-                        <p>Спасибо за каждое утро, когда я просыпаюсь с мыслями о тебе.</p>
-                        <p>Спасибо за каждый вечер, когда мы вместе.</p>
+                        <p>Ты лучшее, что случилось со мной.</p>
+                        <p>Я просыпаюсь и думаю о тебе.</p>
+                        <p>Засыпаю и тоже думаю о тебе.</p>
                         <p>Ты научила меня любить по настоящему.</p>
-                        <p>Люблю тебя сильнее с каждым днём! 💕</p>
-                        <div class="stars">✨ ⭐ ✨</div>
+                        <p>Люблю тебя.</p>
+                        <div class="stars"></div>
                     </div>
                 </div>
             </div>
@@ -254,19 +254,19 @@
             <h1>🎉 Ты открыла сейф! 🎉</h1>
             <div class="final-message">
                 <div class="final-letter">
-                    <p>Моя дорогая, любимая Настенька!</p>
-                    <p>Ты прошла весь этот квест, и я так тобой горжусь! Ты такая умничка и я безумно счастлив, что ты есть в моей жизни.</p>
-                    <p>Каждый день рядом с тобой это маленькое чудо. Ты наполняешь мою жизнь смыслом, радостью и бесконечной любовью.</p>
-                    <p>Я хочу, чтобы ты знала, что бы ни случилось, я всегда буду рядом. Буду поддерживать тебя, заботиться о тебе и любить тебя всем сердцем.</p>
-                    <p>Спасибо, что выбрала меня. Спасибо, что ты такая замечательная. Спасибо за каждую улыбку, за каждый смех, за каждое мгновение вместе.</p>
+                    <p>Настенька!</p>
+                    <p>Ты прошла весь квест. Я знал, что ты справишься.</p>
+                    <p>Слушай, я правда не самый идеальный парень. Иногда косячу, иногда веду себя не так. Но ты всё равно рядом. И это для меня значит очень много.</p>
+                    <p>Ты заботливая. Ты милая. Ты добрая. У тебя красивые глаза и волосы. Это факты, а не комплименты ради комплиментов.</p>
+                    <p>Спасибо, что выбрала меня. Серьёзно.</p>
                     <div class="gift-reveal">
-                        <p class="gift-intro">А теперь самое интересное...</p>
-                        <p class="gift-text">Тебя ждёт настоящий подарок! 🎁</p>
-                        <p>Скорее напиши мне, что ты открыла сейф! Я очень жду, чтобы рассказать тебе, какой сюрприз тебя ждёт. Это будет что-то особенное, как и ты!</p>
+                        <p class="gift-intro">Теперь самое важное</p>
+                        <p class="gift-text">Тебя ждёт настоящий подарок!</p>
+                        <p>Напиши мне, что открыла сейф. Я расскажу, что тебя ждёт.</p>
                     </div>
-                    <h2>С Новым 2025 Годом, моя любовь!</h2>
-                    <p class="love-text">Люблю тебя бесконечно сильно! ❤</p>
-                    <p class="signature-final">Навсегда твой Даня</p>
+                    <h2>С Новым 2025 Годом!</h2>
+                    <p class="love-text">Люблю тебя.</p>
+                    <p class="signature-final">Твой Даня</p>
                 </div>
             </div>
             <div class="fireworks"></div>
@@ -293,7 +293,7 @@
         </div>
         <div class="cat-hat">🎅</div>
         <div class="cat-bubble" id="cat-bubble">
-            <p id="cat-message">Привет! Я Карамелька! Нажми на меня, и я тебе что-нибудь скажу! 🐱</p>
+            <p id="cat-message">Привет! Я Карамелька! Нажми на меня, и я тебе что-нибудь скажу!</p>
         </div>
     </div>
 
